--- a/argocd-configuration.yaml
+++ b/argocd-configuration.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/jirivasm/Kubernetes-test.git
     targetRevision: HEAD
-    path: /
+    path: apps
   destination:
     server: https://kubernetes.default.svc
     namespace: myapp
