--- a/prometheus-configuration.yaml
+++ b/prometheus-configuration.yaml
@@ -11,8 +11,7 @@ spec:
     chart: kube-prometheus-stack
   destination:
     server: https://kubernetes.default.svc
-    namespace: prometheus
-
+    namespace: myapp
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
