--- a/prometheus-configuration.yaml
+++ b/prometheus-configuration.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: metrics
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 60.0.1
+    targetRevision: 60.0.2
     chart: kube-prometheus-stack
   destination:
     server: https://kubernetes.default.svc
