--- a/project/constraints/allowed-repos.yaml
+++ b/project/constraints/allowed-repos.yaml
@@ -1,7 +1,7 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: K8sAllowedRepos
 metadata:
-  name: repo-is-openpolicyagent
+  name: allowed-repos
 spec:
   enforcementAction: deny
   match:
@@ -12,7 +12,7 @@ spec:
         kinds: ["Pod"]
   parameters:
     repos:
-      - "openpolicyagent/"
-      - "jirivasm/"
-      - "registry.k8s.io/"
-      - "gcr.io/"
+      - "quay.io/" #cert manager, argocd, prometheus, 
+      - "openpolicyagent/" # openpolicyagent, gatekeeper
+      - "registry.k8s.io/" # nginx
+      - "cr.fluentbit.io/" # fluentbit
