--- a/project/constraints/disallow-tags.yaml
+++ b/project/constraints/disallow-tags.yaml
@@ -1,7 +1,7 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: K8sDisallowedTags
 metadata:
-  name: container-image-must-not-have-latest-tag
+  name: disallowed-tags
 spec:
   match:
     kinds:
@@ -9,8 +9,6 @@ spec:
         kinds: ["Deployment","ReplicaSet", "StatefulSet", "DaemonSet"]
       - apiGroups: [""]
         kinds: ["Pod"]
-    namespaces:
-      - "myapp"
   parameters:
     tags: ["latest"]
-    exemptImages: ["openpolicyagent/opa-exp:latest", "openpolicyagent/opa-exp2:latest","jirivasm/hello-wolrd-pyton:latest" ]
+    exemptImages: ["openpolicyagent/opa-exp:latest", "openpolicyagent/opa-exp2:latest" ]
