--- a/project/gatekeeper/gatekeeper-config.yaml
+++ b/project/gatekeeper/gatekeeper-config.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: "gatekeeper-system"
 spec:
   match:
-    - excludedNamespaces: ["kube-*", "default", argocd]
+    - excludedNamespaces: ["kube-*", "default", "argocd", "cert-manager","ingress-nginx","keycloack","observability" ]
       processes: ["*"]
