added more policies and added security context for flask-demo

--- a/project/pod.yaml
+++ b/project/pod.yaml
@@ -9,7 +9,8 @@ spec:
   containers:
   - name: myapp
     image: jirivasm/hello-wolrd-pyton:latest
-    securityContext: {}
+    #securityContext: 
+      #runAsNonRoot: false
     resources:
       limits:
         memory: "128Mi"
