--- a/project/pod.yaml
+++ b/project/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: myapp
   labels:
     name: myapp
-  namespace: myapp
+  namespace: intern
 spec:
   containers:
   - name: myapp
@@ -13,7 +13,7 @@ spec:
       #runAsNonRoot: false
     resources:
       limits:
-        memory: "128Mi"
+        memory: "2Gi"
         cpu: "500m"
     ports:
       - containerPort: 5000
