--- a/project/constraintTemplates/allowed-capabilities.yaml
+++ b/project/constraintTemplates/allowed-capabilities.yaml
@@ -56,7 +56,12 @@ spec:
         violation[{"msg": msg}] {
           # spec.containers.securityContext.capabilities field is immutable.
           not is_update(input.review)
-        
+
+          container := input.review.object.spec.template.spec.containers[_]
+          not is_exempt(container)
+          has_disallowed_capabilities(container)
+          msg := sprintf("container <%v> has a disallowed capability. Allowed capabilities are %v", [container.name, get_default(input.parameters, "allowedCapabilities", "NONE")])
+        }
 
         violation[{"msg": msg}] {
           not is_update(input.review)
@@ -64,6 +69,16 @@ spec:
           not is_exempt(container)
           missing_drop_capabilities(container)
           msg := sprintf("container <%v> is not dropping all required capabilities. Container must drop all of %v or \"ALL\"", [container.name, input.parameters.requiredDropCapabilities])
+        }
+
+
+
+        violation[{"msg": msg}] {
+          not is_update(input.review)
+          container := input.review.object.spec.template.spec.initContainers[_]
+          not is_exempt(container)
+          has_disallowed_capabilities(container)
+          msg := sprintf("init container <%v> has a disallowed capability. Allowed capabilities are %v", [container.name, get_default(input.parameters, "allowedCapabilities", "NONE")])
         }
 
         violation[{"msg": msg}] {
@@ -75,12 +90,30 @@ spec:
         }
 
 
+
         violation[{"msg": msg}] {
           not is_update(input.review)
-          container := input.review.object.spectemplate.spec.ephemeralContainers[_]
+          container := input.review.object.spec.template.spec.ephemeralContainers[_]
+          not is_exempt(container)
+          has_disallowed_capabilities(container)
+          msg := sprintf("ephemeral container <%v> has a disallowed capability. Allowed capabilities are %v", [container.name, get_default(input.parameters, "allowedCapabilities", "NONE")])
+        }
+
+        violation[{"msg": msg}] {
+          not is_update(input.review)
+          container := input.review.object.spec.template.spec.ephemeralContainers[_]
           not is_exempt(container)
           missing_drop_capabilities(container)
           msg := sprintf("ephemeral container <%v> is not dropping all required capabilities. Container must drop all of %v or \"ALL\"", [container.name, input.parameters.requiredDropCapabilities])
+        }
+
+
+        has_disallowed_capabilities(container) {
+          allowed := {c | c := lower(input.parameters.allowedCapabilities[_])}
+          not allowed["*"]
+          capabilities := {c | c := lower(container.securityContext.capabilities.add[_])}
+
+          count(capabilities - allowed) > 0
         }
 
         missing_drop_capabilities(container) {
