--- a/project/constraintTemplates/disallow-run-as-root.yaml
+++ b/project/constraintTemplates/disallow-run-as-root.yaml
@@ -11,10 +11,17 @@ spec:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package k8snorootcontainers
+
         violation[{"msg": msg, "details": {}}] {
           c := input_containers[_]
           not c.securityContext.runAsNonRoot
           msg := sprintf("Containers running as root or without runAsNonRoot are not allowed: %v, securityContext: %v", [c.name, c.securityContext])
         }
-        input_containers[c] { c := input.review.object.spec.containers[_] }
-        input_containers[c] { c := input.review.object.spec.initContainers[_]
+
+        input_containers[c] {
+          c := input.review.object.spec.template.spec.containers[_]
+        }
+
+        input_containers[c] {
+          c := input.review.object.spec.template.spec.initContainers[_]
+        }
