added more policies

--- a/project/constraints/unique-host.yaml
+++ b/project/constraints/unique-host.yaml
@@ -1,10 +1,11 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: K8sUniqueIngressHost
 metadata:
-  name: ingress-host-conflict
+  name: unique-ingress-host
 spec:
   match:
     kinds:
       - apiGroups: ["networking.k8s.io"]
         kinds: ["Ingress"]
-
+    namespaces: 
+      - "intern"
