--- a/project/constraintTemplates/unique-host.yaml
+++ b/project/constraintTemplates/unique-host.yaml
@@ -6,7 +6,7 @@ metadata:
     metadata.gatekeeper.sh/title: "Unique Ingress Host"
     metadata.gatekeeper.sh/version: 1.0.4
     metadata.gatekeeper.sh/requires-sync-data: |
-      [
+      "[
         [
           {
             "groups": ["extensions"],
@@ -19,7 +19,7 @@ metadata:
             "kinds": ["Ingress"]
           }
         ]
-      ]
+      ]"
     description: >-
       Requires all Ingress rule hosts to be unique.
 
@@ -42,10 +42,11 @@ spec:
 
         violation[{"msg": msg}] {
           input.review.kind.kind == "Ingress"
-          input.review.kind.group == "networking.k8s.io"
+          regex.match("^(extensions|networking.k8s.io)$", input.review.kind.group)
           host := input.review.object.spec.rules[_].host
-          other := data.inventory.namespace[_]["networking.k8s.io/v1"]["Ingress"][name]
+          other := data.inventory.namespace[_][otherapiversion]["Ingress"][name]
+          regex.match("^(extensions|networking.k8s.io)/.+$", otherapiversion)
           other.spec.rules[_].host == host
           not identical(other, input.review)
-          msg := sprintf("Ingress host conflicts with an existing ingress <%v>", [host])
+          msg := sprintf("ingress host conflicts with an existing ingress <%v>", [host])
         }
