--- a/project/constraints/disallow-loadBalancer.yaml
+++ b/project/constraints/disallow-loadBalancer.yaml
@@ -5,5 +5,7 @@ metadata:
 spec:
   match:
     kinds:
-      - apiGroups: [""]
-        kinds: ["Service"]
+      - apiGroups:
+          - ''
+        kinds:
+          - Service
