--- a/project/constraints/require-tls.yaml
+++ b/project/constraints/require-tls.yaml
@@ -1,5 +1,5 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: k8srequiredtls
+kind: K8sHttpsOnly
 metadata:
   name: require-tls-ingress
 spec:
