--- a/project/namespace.yaml
+++ b/project/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: disallowed-namespace
-  # labels:
-  #   owner: jose
+  #labels:
+     #`owner: jose
