--- a/project/services/ingress2.yaml
+++ b/project/services/ingress2.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-host-disallowed2
+  namespace: intern
   annotations:
     kubernetes.io/ingress.allow-http: "false"
 spec:
@@ -10,11 +11,12 @@ spec:
   - host: intern.fts1.nbspreview.com
     http:
       paths:
-      - pathType: Prefix
-        path: /
+      - path: /test
+        pathType: Prefix
         backend:
           service:
             name: nginx
             port:
               number: 8080
+        
 
