--- a/project/constraints/unique-paths.yaml
+++ b/project/constraints/unique-paths.yaml
@@ -8,4 +8,4 @@ spec:
       - apiGroups: ["networking.k8s.io"]
         kinds: ["Ingress"]
   parameters:
-    path: ["/", "/test"]
+    path: ["/"]
