--- a/project/constraintTemplates/unique-paths.yaml
+++ b/project/constraintTemplates/unique-paths.yaml
@@ -24,7 +24,7 @@ spec:
         violation[{"msg": msg}] {
           input.review.object.kind == "Ingress"
           input.review.object.metadata.namespace == input.review.namespace
-          #input.review.object.spec.rules[_].http.paths[_].path == input.parameters.path[_]
+          input.review.object.spec.rules[_].http.paths[_].path == input.parameters.path[_]
           count(input.review.object.spec.rules[_].http.paths[_]) > 1
           msg := sprintf("Ingress with duplicate path '%v' not allowed", [input.parameters.path])
         }
