--- a/project/webdeployment.yaml
+++ b/project/webdeployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: web
   name: web
-  namespace: myapp
+  namespace: intern
   resourceVersion: "132853"
   uid: 9c5539b1-ecb6-443c-9d6a-eb1b5265d47a
 spec:
@@ -32,11 +32,23 @@ spec:
       - image: gcr.io/google-samples/hello-app:2.0
         imagePullPolicy: IfNotPresent
         name: hello-app
-        resources: {}
+        securityContext: 
+          privileged: false
+          #privileged is not allowed
+          #runAsNonRoot: true
+          capabilities:
+            drop: ["ALL"]
+        resources:
+         limits:
+            memory: "1Gi"
+            cpu: "200m"
+         requests:
+            memory: "128Mi"
+            cpu: "200m"
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: {}
+      
       terminationGracePeriodSeconds: 30
